kubernetes/apps/network/playit/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: playit
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: playit

  egress:
    - toEntities:
        - world  # TODO: get concrete info on what ports are required
    - toEndpoints:
        - matchLabels:
            ingress.home.arpa/playit: allow
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists  # any namespace

---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: playit-to-app
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/playit: allow

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: playit
